@@ -3,6 +3,8 @@ package sistemas.operativos.proyecto1;
 import sistemas.operativos.proyecto1.process.Process;
 import sistemas.operativos.proyecto1.process.ProcessType;
 import sistemas.operativos.proyecto1.sched.Scheduler;
+import sistemas.operativos.proyecto1.lib.LinkedList;
+
 
 /**
  * Clase simulador del proyecto.
@@ -130,44 +132,54 @@ public class Simulator {
     }
     
     public void printReport() {
-        var procs = cpu.getAllProcesses();
+        LinkedList<sistemas.operativos.proyecto1.process.Process> procs = cpu.getAllProcesses();
         int n = procs.size();
         if (n == 0) {
             System.out.println("No hay procesos para reportar.");
+            // también conviene resetear stats a 0 aquí si quieres
+            stats.setTotalProcesses(0);
+            stats.setCompletedProcesses(0);
+            stats.setAvgWait(0);
+            stats.setAvgResp(0);
+            stats.setAvgTurn(0);
+            stats.setUtil(0);
+            stats.setThroughput(0);
+            stats.setFairness(1.0);
+            stats.setCurrentProcess(null);
             return;
         }
 
         long completed = 0;
-        long sumWait = 0;
-        long sumResp = 0;
-        long sumTurn = 0;
-        
-        int  respCount = 0;
-        int turnCount = 0;
+        long sumWait   = 0;
+        long sumResp   = 0;
+        long sumTurn   = 0;
 
-        // Para “equidad” (fairness), usaremos Jain sobre el tiempo de espera:
-        // J = ( (Σw)^2 ) / ( n * Σ(w^2) ),  0< J ≤ 1 (1 es perfectamente justo)
-        double sumW = 0.0;
+        int  respCount = 0;
+        int  turnCount = 0;
+
+        double sumW  = 0.0;
         double sumW2 = 0.0;
 
         System.out.println("\n===== REPORTE =====");
-        for (var p : procs) {
+        for (int i = 0; i < n; i++) {
+            var p = procs.get(i);
+
             Integer start  = p.firstRun();
             Integer finish = p.finishTime();
-            long wait      = p.totalWait();                   // ya lo acumulas con onEnqueuedReady/onDispatchedToCpu
+            long    wait   = p.totalWait();
             Integer arr    = p.arrival();
 
-            Integer resp   = (start == null || arr == null)  ? null : (start - arr);
-            Integer turn   = (finish == null || arr == null) ? null : (finish - arr);
+            Integer resp = (start  == null || arr == null) ? null : (start  - arr);
+            Integer turn = (finish == null || arr == null) ? null : (finish - arr);
 
             if (finish != null) completed++;
 
             sumWait += wait;
-             if (resp != null) { sumResp += resp; respCount++; }
-             if (turn != null) { sumTurn += turn; turnCount++; }
-             
+            if (resp != null) { sumResp += resp; respCount++; }
+            if (turn != null) { sumTurn += turn; turnCount++; }
+
             sumW  += wait;
-            sumW2 += ((double)wait)*wait;
+            sumW2 += ((double) wait) * wait;
 
             System.out.printf(
                 "%s  arr=%d  start=%s  finish=%s  wait=%d  resp=%s  turn=%s  pc=%d%n",
@@ -175,25 +187,21 @@ public class Simulator {
                 String.valueOf(start), String.valueOf(finish),
                 wait,
                 String.valueOf(resp), String.valueOf(turn),
-                p.pc() // servicio efectivamente ejecutado
+                p.pc()
             );
         }
 
-        // Promedios (se calculan sobre los que tienen valor)
-        double avgWait = n == 0 ? 0 : (double) sumWait / n;
-        double avgResp = n == 0 ? 0 : (double) sumResp / respCount;
-        double avgTurn = n == 0 ? 0 : (double) sumTurn / turnCount;
+        double avgWait = (n == 0)        ? 0 : (double) sumWait / n;
+        double avgResp = (respCount == 0) ? 0 : (double) sumResp / respCount;
+        double avgTurn = (turnCount == 0) ? 0 : (double) sumTurn / turnCount;
 
-        // Utilización de CPU
-        long busy = cpu.getBusyCycles();
+        long busy        = cpu.getBusyCycles();
         long totalCycles = config.getCyclesAmount();
-        double util = totalCycles == 0 ? 0 : (100.0 * busy / totalCycles);
+        double util      = (totalCycles == 0) ? 0 : (100.0 * busy / totalCycles);
 
-        // Throughput = procesos completados / tiempo total simulado (en ciclos)
-        double throughput = totalCycles == 0 ? 0 : ((double) completed / totalCycles);
+        double throughput = (totalCycles == 0) ? 0 : ((double) completed / totalCycles);
 
-        // Fairness (Jain) sobre los tiempos de espera
-        double fairness  = (n == 0 || sumW2 == 0.0) ? 1.0 : ((sumW * sumW) / (n * sumW2));
+        double fairness = (n == 0 || sumW2 == 0.0) ? 1.0 : ((sumW * sumW) / (n * sumW2));
 
         System.out.println("----- Agregados -----");
         System.out.printf("Completados: %d de %d%n", completed, n);
@@ -202,7 +210,7 @@ public class Simulator {
         System.out.printf("Throughput (proc/ciclo): %.4f%n", throughput);
         System.out.printf("Fairness (Jain sobre WAIT): %.3f%n", fairness);
         System.out.println("====================\n");
-        
+
         stats.setTotalProcesses(n);
         stats.setCompletedProcesses(completed);
         stats.setAvgWait(avgWait);
@@ -211,7 +219,7 @@ public class Simulator {
         stats.setUtil(util);
         stats.setThroughput(throughput);
         stats.setFairness(fairness);
-        
+
         stats.setCurrentProcess(this.cpu.getCurrentProcess());
     }
     
@@ -287,8 +295,10 @@ public class Simulator {
     
     private void dumpLogToFile() {
         try {
-            java.nio.file.Path out = java.nio.file.Path.of("events.log");
-            java.nio.file.Files.write(out, cpu.getEventLog(), java.nio.charset.StandardCharsets.UTF_8);
+            java.nio.file.Path out = java.nio.file.Paths.get("events.log");
+            String[] lines = cpu.getEventLogArray();  // ← de CPU
+            String body = String.join(System.lineSeparator(), lines);
+            java.nio.file.Files.writeString(out, body, java.nio.charset.StandardCharsets.UTF_8);
             System.out.println("Log de eventos escrito en " + out.toAbsolutePath());
         } catch (Exception e) {
             System.err.println("No se pudo escribir events.log: " + e.getMessage());
